tests/sumo/basic/person/errors/unsuitable_vclass/errors.sumo.agg
Warning: 1 total messages of type: Person '%' receives type '%' which implicitly uses unsuitable vClass '%'.
